#2 Two way data binding with v-model

--- a/1.GuestList-starter-template/index.html
+++ b/1.GuestList-starter-template/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    npm install vue
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Guest List</title>
@@ -38,9 +37,11 @@
 
                         <form class="form-inline">
                             <input type="text" id="nameInput" class="form-control mb-2 mr-sm-2 mb-sm-0"
-                                   placeholder="Jane Doe">
-                            <input type="submit" class="btn btn-primary"></input>
+                                   placeholder="Jane Doe"
+                            v-model ="newNameText">
+                            <input type="submit" class="btn btn-primary">
                         </form>
+                        {{newNameText}}
                     </div>
                 </div>
             </div>
