--- a/1.GuestList-starter-template/index.html
+++ b/1.GuestList-starter-template/index.html
@@ -29,13 +29,13 @@
                     </div>
                     <div class="card-block">
                         <h4 class="card-title">
-                            {{eventTitle}}
+{{event.eventTitle}}
                         </h4>
                         <hr>
                         <p class="card-text"> {{event.eventDescription}}</p>
                         <p class="card-text">Add your name to the guest list for exclusive offers:</p>
 
-                        <form class="form-inline">
+                        <form class="form-inline" v-on:submit.prevent="formSubmitted">
                             <input type="text" id="nameInput" class="form-control mb-2 mr-sm-2 mb-sm-0"
                                    placeholder="Jane Doe"
                             v-model ="newNameText">
@@ -61,6 +61,7 @@
                         </div>
                         <div>
                             <h4>No names added yet...</h4>
+                            {{guestName}}
                         </div>
                     </div>
                 </div>
