--- a/1.GuestList-starter-template/index.html
+++ b/1.GuestList-starter-template/index.html
@@ -55,8 +55,10 @@
                     </div>
                     <div class="card-block">
                         <div>
-                            <div class="card-success rounded name-box">
-
+                            <div class="card-success rounded name-box"
+                            v-for="name in guestName"
+                            >
+                                {{name}}
                             </div>
                         </div>
                         <div>
