--- a/1.GuestList-starter-template/index.html
+++ b/1.GuestList-starter-template/index.html
@@ -24,12 +24,12 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
-                    <div class="card-header">
+                    <div class="card-header" v-bind:class="formSubmitClass">
                         {{event.eventDate}}
                     </div>
                     <div class="card-block">
                         <h4 class="card-title">
-{{event.eventTitle}}
+                            {{event.eventTitle}}
                         </h4>
                         <hr>
                         <p class="card-text"> {{event.eventDescription}}</p>
@@ -38,7 +38,7 @@
                         <form class="form-inline" v-on:submit.prevent="formSubmitted">
                             <input type="text" id="nameInput" class="form-control mb-2 mr-sm-2 mb-sm-0"
                                    placeholder="Jane Doe"
-                            v-model ="newNameText">
+                                   v-model="newNameText">
                             <input type="submit" class="btn btn-primary">
                         </form>
                         {{newNameText}}
@@ -56,7 +56,7 @@
                     <div class="card-block">
                         <div v-if="guestName.length >0">
                             <div class="card-success rounded name-box"
-                            v-for="name in guestName"
+                                 v-for="name in guestName"
                             >
                                 {{name}}
                             </div>
