# Vue shorthand syntax

--- a/1.GuestList-starter-template/index.html
+++ b/1.GuestList-starter-template/index.html
@@ -15,16 +15,16 @@
 <div id="app">
     <div class="container">
 
-        <div class="row">
+        <div class="row"  :class="formSubmitClass">
             <div class="col-sm-12 text-center">
                 <h1>Guest List</h1>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" :style="appStyles">
             <div class="col-sm-12">
                 <div class="card">
-                    <div class="card-header" v-bind:class="formSubmitClass">
+                    <div class="card-header" :class="formSubmitClass">
                         {{event.eventDate}}
                     </div>
                     <div class="card-block">
@@ -35,11 +35,11 @@
                         <p class="card-text"> {{event.eventDescription}}</p>
                         <p class="card-text">Add your name to the guest list for exclusive offers:</p>
 
-                        <form class="form-inline" v-on:submit.prevent="formSubmitted">
+                        <form class="form-inline" @submit.prevent="formSubmitted">
                             <input type="text" id="nameInput" class="form-control mb-2 mr-sm-2 mb-sm-0"
                                    placeholder="Jane Doe"
                                    v-model="newNameText">
-                            <input type="submit" class="btn btn-primary">
+                            <input type="submit" :class="formSubmitClass" class="btn btn-primary">
                         </form>
                         {{newNameText}}
                     </div>
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row":class="formSubmitClass">
             <div class="col-sm-12">
                 <div class="card">
                     <div class="card-header">
