#Using Javascript expressions

--- a/1.GuestList-starter-template/index.html
+++ b/1.GuestList-starter-template/index.html
@@ -58,7 +58,7 @@
                             <div class="card-success rounded name-box"
                                  v-for="name in guestName"
                             >
-                                {{name}}
+                                {{name.toUpperCase()}}
                             </div>
                         </div>
                         <div v-else>
