--- a/1.GuestList-starter-template/index.html
+++ b/1.GuestList-starter-template/index.html
@@ -38,7 +38,12 @@
                         <form class="form-inline" @submit.prevent="formSubmitted">
                             <input type="text" id="nameInput" class="form-control mb-2 mr-sm-2 mb-sm-0"
                                    placeholder="Jane Doe"
-                                   v-model="newNameText">
+                                   v-model="newNameText"
+                            @keyup.32="keyPressed"
+                                   @keyup.enter="keyPressed"
+
+
+                            >
                             <input type="submit"  class="btn btn-primary">
 
 
