--- a/1.GuestList-starter-template/index.html
+++ b/1.GuestList-starter-template/index.html
@@ -11,16 +11,17 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
+<div class="container">
 
-<div id="app">
-    <div class="container">
-
-        <div class="row" :style="appStyles">
+    <div id="navigation">
+        <div class="row" >
             <div class="col-sm-12 text-center">
-                <h1 >Guest List</h1>
+                <h1 >{{appName}}</h1>
             </div>
         </div>
+    </div>
 
+<div id="app">
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
