--- a/1.GuestList-starter-template/index.html
+++ b/1.GuestList-starter-template/index.html
@@ -23,8 +23,13 @@
         <div>
             <ul>
                 <template v-for="navLink in navLinks">
-                    <li>{{navLink.name}}</li>
-                    <li>{{navLink.id}}</li>
+                    <li style="color: limegreen"> {{navLinks}}</li>
+                    <li style="color: orangered">{{navLink}}</li>
+                    <li style="color: royalblue">{{navLink.name}} {{navLink.id}} </li>
+
+                    <li v-for="value in navLink " style="color: hotpink">{{value}}</li>
+                    <hr class="strong">
+
                 </template>
             </ul>
         </div>
