--- a/1.GuestList-starter-template/index.html
+++ b/1.GuestList-starter-template/index.html
@@ -16,7 +16,7 @@
     <div id="navigation">
         <div class="row">
             <div class="col-sm-12 text-center">
-                <h1 @click.prevent="changeTitle" ref="name">{{appName}}</h1>
+                <h1 @click.prevent="changeTitle" ref="name">Guest List </h1>
                 <hr>
             </div>
         </div>
@@ -68,7 +68,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
-                    <div class="card-header">
+                    <div class="card-header" >
                         Attending ({{guestName.length}} /{{eventCapacity}})
                         <br>
                         <progress :style="{width: eventCapacityPercentage +'%'}"></progress>
@@ -78,7 +78,7 @@
                             <div class="card-success rounded name-box"
                                  v-for=" (name, index) in sortNames"
                                  :key="name"
-                            >
+                                 @click.prevent="removeGuest(index)">
                                 {{name | formatName}} ({{index}})
                             </div>
                         </div>
